welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:34: error: type mismatch;
 found   : Int(1)
 required: Boolean
while (1)
       ^